fix home page on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Press Start 2P", system-ui;
     font-size: 1.5rem;
     margin-bottom: 3rem;
-    margin-top: 10vh;
+    margin-top: 3rem;
 }
 
 .start-button {
@@ -81,10 +81,10 @@ body {
 /* --- Specific Mobile Styles for smaller devices --- */
 @media (max-width: 400px) {
     h1, h2, h3, h4, h5, h6 {
-        font-size: 2.3rem;
+        font-size: 2rem;
     }
     .high-score-menu {
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
     .start-button {
         font-size: 1.5rem;
@@ -95,13 +95,13 @@ body {
 /* --- Specific Mobile Styles for very small devices --- */
 @media (max-width: 340px) {
     h1, h2, h3, h4, h5, h6 {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
     .high-score-menu {
-        font-size: 1rem;
+        font-size: 0.75rem;
     }
     .start-button {
-        font-size: 1.2rem;
+        font-size: 1rem;
         padding: 10px 15px;
     }
 }
